--- a/README
+++ b/README
@@ -16,7 +16,7 @@ Build and execution instructions:
 
   In the directory php-java-bridge-p.x.y type:
 
-          java -version        # 1.4.2 or above (1.5 or 1.6 recommended)
+          java -version        # 1.4.2 or above (JRE >= 1.6 recommended)
           gcc --version        # 3.2.3 or above (4.0.x recommended)
           apachectl -version   # Apache 1.3 or above (2.x recommended)
           php-config --version # PHP 4.3.4 or above (5.x or 6.x recommended)
