--- a/README
+++ b/README
@@ -20,9 +20,9 @@ Build and execution instructions:
           gcc --version        # 3.2.3 or above (4.0.x recommended)
           apachectl -version   # Apache 1.3 or above (2.x recommended)
           php-config --version # PHP 4.3.4 or above (5.x or 6.x recommended)
-          make null --version  # GNU make 3.79 or above
+          make null --version  # GNU make
 
-          phpize && 
+          phpize &&
           ./configure --with-java=/usr/java/default &&
           make &&
           su -c "sh install.sh"
@@ -33,6 +33,8 @@ Build and execution instructions:
 
   Please see the output of ./configure --help=recursive for further
   configure options.
+
+  Please see the INSTALL document for detailed instructions.
 
 ------------------------------------
    Permanently activate the module
@@ -131,7 +133,7 @@ Build and execution instructions:
   back-end. Example for option:
 
   #1: Not needed, back-end starts automatically
-  #2: /usr/sbin/php-java-bridge (see [note: SERVICE] below)
+  #2: service php-java-bridge restart (see [note: SERVICE] below)
   #3: java -jar JavaBridge.jar INET:9267 3 php-java-bridge.log
   #4: service tomcat5 restart
   #5: service tomcat5 restart
@@ -497,8 +499,12 @@ Build and execution instructions:
 
         su -                                      # become super user
         newrole -t initrc_t                       # change domain
-        kill `cat /var/run/php-java-bridge.pid`   # kill old executable
-        /usr/sbin/php-java-bridge                 # start new back-end
+        kill `cat /var/run/php-java-bridge.pid`   # terminate the old process
+        /usr/sbin/php-java-bridge                 # start a new back-end
+
+  or simply use the service script:
+
+        service php-java-bridge restart
 
   Please note that SEL security is orthogonal to the standard Unix 
   security. For example you could also put the java process into 
