--- a/README
+++ b/README
@@ -16,16 +16,24 @@ Build and execution instructions:
 
   In the directory php-java-bridge-p.x.y type:
 
-          java -version        # 1.4.2 or above (JRE >= 1.6 recommended)
+          java -version        # 1.4.2 or above (JDK or JRE >= 1.6 recommended)
           gcc --version        # 3.2.3 or above (4.0.x recommended)
           apachectl -version   # Apache 1.3 or above (2.x recommended)
           php-config --version # PHP 4.3.4 or above (5.x or 6.x recommended)
           make null --version  # GNU make
+          autoconf --version   # GNU autoconf 2.57 or higher
+          automake --version   # GNU automake 1.6.3 or higher
+          libtool --version    # GNU libtool 1.4.3 or higher
 
           phpize &&
-          ./configure --with-java=/usr/java/default &&
+          ./configure --with-java=<JDK_HOME>[,<JRE_HOME>] &&
           make &&
           su -c "sh install.sh"
+
+  Example:
+       
+          phpize &&./configure --with-java=/opt/jdk1.4 && make && sh install.sh
+
 
   If your administrator allows you to dynamically load extensions, you
   can now test the extension by invoking the test.php with the 
@@ -223,13 +231,11 @@ Build and execution instructions:
   "copying" the non jsp files from the tomcat webapps directory into
   the apache document root directory at run-time.
 
-  A more reasonable approach would be to remove mod_jk and to create a
-  shared web directory for tomcat and apache. This is the default since
-  Red Hat Fedora 4.
-
-  Most modern frameworks, Java Server Faces for example, require that
-  you manually forward to the "back-end", anyway. The code would look
-  like:
+  A more reasonable approach would be to remove mod_jk, to create a
+  shared web directory for tomcat and apache and to forward to the
+  "back-end", when necessary. Most modern frameworks, Java Server Faces
+  for example, require that you manually forward to the "back-end",
+  anyway. The code would look like:
 
   <?php
    ...
