--- a/server/WEB-INF/cgi/README
+++ b/server/WEB-INF/cgi/README
@@ -1,7 +1,6 @@
 If this directory does NOT contain a php CGI executable called
 php-cgi-<architecture>-<os>[.exe|.sh], the following system default
-FastCGI or CGI binary will used: /usr/bin/php-cgi, /usr/bin/php or
-c:/php5/php-cgi.exe.
+FastCGI or CGI binary will used: /usr/bin/php-cgi or c:/php5/php-cgi.exe.
 
 If this directory DOES contain a php CGI executable, the bridge will
 call it using the CGI interface.
@@ -12,5 +11,6 @@ CGI binary into this directory and create a wrapper
 (recommended). Please see the php-cgi-x86-linux.sh and
 php-cgi-i386-linux.sh for a template.
 
-
-
+Note that FastCGI is currently only available on Unix/Linux; the
+pre-compiled Windows php-cgi.exe doesn't support the necessary -b
+option.
