--- a/NEWS
+++ b/NEWS
@@ -5,6 +5,11 @@ Please send bug reports, questions and suggestions to
 
 Version 3.1.8:
 
+* A pure PHP implementation of the PHP/Java Bridge is now available in
+the "javabridge" folder. This means that it is no longer necessary to
+compile and to install a non-standard PHP extension on the web or J2EE
+server.
+
 * Bugfixes only, see the ChangeLog for details.
 
 
