--- a/NEWS
+++ b/NEWS
@@ -3,12 +3,15 @@ php-java-bridge NEWS -- history of user-visible changes.
 Please send bug reports, questions and suggestions to
 <php-java-bridge-users@lists.sourceforge.net>.
 
-Version 3.1.8:
+Version 3.2.0:
 
 * A pure PHP implementation of the PHP/Java Bridge is now available in
-the "javabridge" folder. This means that it is no longer necessary to
+the "java" folder. This means that it is no longer necessary to
 compile and to install a non-standard PHP extension on the web or J2EE
 server.
+
+
+Version 3.1.8 
 
 * Bugfixes only, see the ChangeLog for details.
 
